--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.17.6"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
